Added config toggle for converting torches when Clentaminator is used