@@ -2,6 +2,8 @@
 
 ![Icon](https://raw.githubusercontent.com/direwolf420/TorchGodTweaks/master/icon.png)
 
+Steam Workshop link: https://steamcommunity.com/sharedfiles/filedetails/?id=2665127853
+
 Torch God Tweaks provides a way to skip the event entirely, and some QoL features regarding torches, Torch God and Torch God's Favor.
 
 **Torch God's Favor Recipe:**
@@ -14,15 +16,24 @@ Torch God Tweaks provides a way to skip the event entirely, and some QoL feature
 **Reverse Torch Swap:**
 * Toggle if biome torches should turn into regular torches when picked up (only if 'Biome torch swap' is enabled)
     * This does not include Coral, Cursed, and Ichor torches
+    * Separate toggles for Demon, Aether, and Bone torches as they don't contribute to luck
 
 **Convert Torches Upon Hardmode:**
 * Toggle if any torch that is near evil blocks will get converted to the corresponding evil torch when hardmode is first entered
 
 **Prevent Torch God Spawn:**
-* Toggle if Torch God should never spawn (its regular condition is 'more than 100 torches nearby')
+* Toggle if Torch God should never spawn (its regular condition is 'in caverns & more than 100 torches nearby')
 
 **Convert Torches When Clentaminating:**
-* Toggle if any placed, convertible torch (any evil or regular torch) will get converted when Clentaminator is used
+* Toggle if any placed, convertible torch (that has a matching Solution) will get converted when Clentaminator is used
 * This will only convert to/from regular torches, not bone torches
 
 Check the config for more details (__all options are enabled by default__).
+
+## Localization
+If you wish to contribute translations, visit the [tML wiki page](https://github.com/tModLoader/tModLoader/wiki/Localization) on that.
+This mod uses `.hjson` files in the `Localization` folder.
+Translate things that are in english and commented out (either via `//` or `/* */`, remove the comment markers after translating)
+
+List of localization contributors:
+* None!
