@@ -10,15 +10,21 @@ Torch God Tweaks provides a way to skip the event entirely, and some QoL feature
 [b]Reverse Torch Swap:[/b]
 * Toggle if biome torches should turn into regular torches when picked up (only if 'Biome torch swap' is enabled)
     * This does not include Coral, Cursed, and Ichor torches
+    * Separate toggles for Demon, Aether, and Bone torches as they don't contribute to luck
 
 [b]Convert Torches Upon Hardmode:[/b]
 * Toggle if any torch that is near evil blocks will get converted to the corresponding evil torch when hardmode is first entered
 
 [b]Prevent Torch God Spawn:[/b]
-* Toggle if Torch God should never spawn (its regular condition is 'more than 100 torches nearby')
+* Toggle if Torch God should never spawn (its regular condition is 'in caverns & more than 100 torches nearby')
 
 [b]Convert Torches When Clentaminating:[/b]
-* Toggle if any placed, convertible torch (any evil or regular torch) will get converted when Clentaminator is used
+* Toggle if any placed, convertible torch (that has a matching Solution) will get converted when Clentaminator is used
 * This will only convert to/from regular torches, not bone torches
 
 Check the config for more details ([u]all options are enabled by default[/u]).
+[hr][/hr]
+[b]Localization:[/b]
+If you want to add support for different languages, you are welcome to contribute localizations here: [b][url=https://github.com/direwolf420/TorchGodTweaks]GitHub[/url][/b]
+List of localization contributors:
+* None!
