@@ -1,6 +1,0 @@
-{
-  "WorkshopPublishedVersion": 1,
-  "ContentType": "Mod",
-  "SteamEntryId": 2562925043,
-  "Publicity": 2
-}
